--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
 			#output1
 			{
 				width: 100%;
-				background-color:red;
+				background-color:#00E619;
 				text-align: center;
 				font-size: 30px;
 				letter-spacing: 2px;
