--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 			#output2
 			{
 				width: 100%;
-				background-color:#red;
+				background-color:red;
 				text-align: center;
 				font-size: 30px;
 				letter-spacing: 2px;
