--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 			#output2
 			{
 				width: 100%;
-				background-color:red;
+				background-color:#FF2300;
 				text-align: center;
 				font-size: 30px;
 				letter-spacing: 2px;
@@ -52,7 +52,7 @@
 				letter-spacing: 1px;
 				float:center;
 				text-align:center;
-				color:red;
+				color:#00b432;
 			}
 			#tag2
 			{
@@ -61,7 +61,7 @@
 				letter-spacing: 1px;
 				float:center; 
 				text-align:center; 
-				color:blue;
+				color:#FF2300;
 			}
 			#startPause
 			{
